Heading & Para Added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+
+    <center>
+        <h1>Lorem, ipsum dolor.</h1>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur debitis asperiores quos aliquam ipsam animi, totam at commodi sapiente omnis nesciunt! Sapiente quaerat dicta rem cupiditate ipsa facilis, deserunt voluptates quo? Est, cum, velit similique enim optio culpa quibusdam laudantium perferendis laborum eos quod dolorum iusto non, laboriosam voluptatibus facilis.</p>
+    </center>
     
 </body>
 </html>
